[package]
name = "frontend-gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
enumflags2 = "0.7.10"
lazy_static = "1.5.0"
power-daemon = { version = "0.1.0", path = "../power-daemon", features = [
    "client",
] }
relm4 = { version = "0.9.0", features = ["gnome_46", "libadwaita"] }
tokio = { version = "1.39.2", features = ["full"] }
tracker = "0.2.2"
