[package]
name = "frontend"
version = "0.1.0"
authors = ["TheAlexDev23 <thealexdev23@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"

dioxus = { version = "0.5", features = ["desktop"] }

power-daemon = { path = "../power-daemon", features = ["client"] }
tokio = { version = "1.38.1", features = ["full"] }
