[package]
name = "power-daemon"
version = "1.0.0"
edition = "2021"

[features]
communication = ["dep:zbus"]
client = ["communication"]
server = ["communication"]


[dependencies]
glob = "0.3.1"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
natord = "1.0.9"
rayon = "1.10.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["serde_derive"] }
serde-toml-merge = "0.3.8"
serde_json = "1.0.120"
shellwords = "1.1.0"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
zbus = { version = "4.3.1", optional = true }
